defmt/tests/ui/fail/log-invalid-hint.stderr
error: unknown display hint: "dunno"
 --> $DIR/log-invalid-hint.rs:2:18
  |
2 |     defmt::info!("{=u8:dunno}", 42)
  |                  ^^^^^^^^^^^^^
